--- a/css/style.css
+++ b/css/style.css
@@ -157,4 +157,14 @@ footer {
   transition: all 0.3s ease, box-shadow 0.6s ease;
   z-index: 9999;
 }
+/* .publications{
+  padding: 1rem;
+  } */
+
+  .publications a{
+    text-decoration:none;
+  }
+   .publications a:hover{
+    color:red;
+   }
 
